@@ -589,7 +589,7 @@ ifaceC (ExportFun n cn ret args)
         argNames = zipWith (++) (repeat "arg") (map show [0..])
 
 mkBody n as t = indent 1 ++ "INITFRAME;\n" ++
-                indent 1 ++ "RESERVE(" ++ show (length as) ++ ");\n" ++
+                indent 1 ++ "RESERVE(" ++ show (max (length as) 3) ++ ");\n" ++
                 push 0 as ++ call n ++ retval t
   where push i [] = ""
         push i ((n, t) : ts) = indent 1 ++ c_irts (toFType t) 
@@ -601,6 +601,15 @@ mkBody n as t = indent 1 ++ "INITFRAME;\n" ++
                  indent 1 ++ "ADDTOP(" ++ show (length as) ++ ");\n" ++
                  indent 1 ++ "CALL(" ++ cname n ++ ");\n"
 
+        retval (FIO t)
+           = indent 1 ++ "TOP(0) = NULL;\n" ++
+             indent 1 ++ "TOP(1) = NULL;\n" ++
+             indent 1 ++ "TOP(2) = RVAL;\n" ++
+             indent 1 ++ "STOREOLD;\n" ++
+             indent 1 ++ "BASETOP(0);\n" ++
+             indent 1 ++ "ADDTOP(3);\n" ++
+             indent 1 ++ "CALL(" ++ cname (sUN "call__IO") ++ ");\n" ++
+             retval t
         retval t = indent 1 ++ "return " ++ irts_c (toFType t) "RVAL" ++ ";\n"
 
 ctype (FCon c)
@@ -615,7 +624,7 @@ ctype (FApp c [_])
   | c == sUN "C_Any" = "VAL"
 ctype (FStr s) = s
 ctype FUnknown = "void*"
-ctype FWorld = "void*"
+ctype (FIO t) = ctype t
 ctype t = error "Can't happen: Not a valid interface type " ++ show t
 
 carith (FCon i)
